tests/sumo/output/vtypeprobe/errors/freq_false/errors.sumo
Error: Attribute 'freq' in definition of vTypeProbe 'test1' is not a time value.
Quitting (on error).
